# realtime-binance-analytics-cpp

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/analysis/: Analyzer.cpp  Analyzer.h  ExponentialMovingAverage.cpp  ExponentialMovingAverage.h  SimpleMovingAverage.cpp  SimpleMovingAverage.h
